@@ -6,22 +6,30 @@
  */
 package com.powsybl.openloadflow.network.impl;
 
+import com.powsybl.iidm.network.DanglingLine;
+import com.powsybl.iidm.network.LccConverterStation;
 import com.powsybl.iidm.network.Load;
 import com.powsybl.iidm.network.extensions.LoadDetail;
-import com.powsybl.openloadflow.network.AbstractPropertyBag;
-import com.powsybl.openloadflow.network.LfLoad;
-import com.powsybl.openloadflow.network.LfNetworkParameters;
+import com.powsybl.openloadflow.network.*;
 import com.powsybl.openloadflow.util.PerUnit;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * @author Anne Tilloy <anne.tilloy at rte-france.com>
  */
-class LfLoadImpl extends AbstractPropertyBag implements LfLoad {
+public class LfLoadImpl extends AbstractLfInjection implements LfLoad {
+
+    private final LfBus bus;
 
     private final List<Ref<Load>> loadsRefs = new ArrayList<>();
+
+    private final List<Ref<LccConverterStation>> lccCsRefs = new ArrayList<>();
+
+    private double targetQ = 0;
+
+    private boolean ensurePowerFactorConstantByLoad = false;
 
     private final List<Double> loadsAbsVariableTargetP = new ArrayList<>();
 
@@ -31,21 +39,95 @@ class LfLoadImpl extends AbstractPropertyBag implements LfLoad {
 
     private Map<String, Boolean> loadsDisablingStatus = new LinkedHashMap<>();
 
-    LfLoadImpl(boolean distributedOnConformLoad) {
+    LfLoadImpl(LfBus bus, boolean distributedOnConformLoad) {
+        super(0, 0);
+        this.bus = Objects.requireNonNull(bus);
         this.distributedOnConformLoad = distributedOnConformLoad;
     }
 
     @Override
+    public String getId() {
+        return bus.getId() + "_load";
+    }
+
+    @Override
     public List<String> getOriginalIds() {
-        return loadsRefs.stream().map(r -> r.get().getId()).collect(Collectors.toList());
+        return Stream.concat(loadsRefs.stream().map(r -> r.get().getId()),
+                             lccCsRefs.stream().map(r -> r.get().getId()))
+                .toList();
+    }
+
+    @Override
+    public LfBus getBus() {
+        return bus;
     }
 
     void add(Load load, LfNetworkParameters parameters) {
         loadsRefs.add(Ref.create(load, parameters.isCacheEnabled()));
         loadsDisablingStatus.put(load.getId(), false);
+        double p0 = load.getP0();
+        targetP += p0 / PerUnit.SB;
+        initialTargetP += p0 / PerUnit.SB;
+        targetQ += load.getQ0() / PerUnit.SB;
+        boolean hasVariableActivePower = false;
+        if (parameters.isDistributedOnConformLoad()) {
+            LoadDetail loadDetail = load.getExtension(LoadDetail.class);
+            if (loadDetail != null) {
+                hasVariableActivePower = loadDetail.getFixedActivePower() != load.getP0();
+            }
+        }
+        if (p0 < 0 || hasVariableActivePower) {
+            ensurePowerFactorConstantByLoad = true;
+        }
         double absTargetP = getAbsVariableTargetP(load);
         loadsAbsVariableTargetP.add(absTargetP);
         absVariableTargetP += absTargetP;
+    }
+
+    void add(LccConverterStation lccCs, LfNetworkParameters parameters) {
+        // note that LCC converter station are out of the slack distribution.
+        lccCsRefs.add(Ref.create(lccCs, parameters.isCacheEnabled()));
+        double lccTargetP = HvdcConverterStations.getConverterStationTargetP(lccCs, parameters.isBreakers());
+        this.targetP += lccTargetP / PerUnit.SB;
+        initialTargetP += lccTargetP / PerUnit.SB;
+        targetQ += HvdcConverterStations.getLccConverterStationLoadTargetQ(lccCs, parameters.isBreakers()) / PerUnit.SB;
+    }
+
+    public void add(DanglingLine danglingLine) {
+        targetP += danglingLine.getP0() / PerUnit.SB;
+        targetQ += danglingLine.getQ0() / PerUnit.SB;
+    }
+
+    @Override
+    public void setTargetP(double targetP) {
+        if (targetP != this.targetP) {
+            double oldTargetP = this.targetP;
+            this.targetP = targetP;
+            for (LfNetworkListener listener : bus.getNetwork().getListeners()) {
+                listener.onLoadActivePowerTargetChange(this, oldTargetP, targetP);
+            }
+        }
+    }
+
+    @Override
+    public double getTargetQ() {
+        return targetQ;
+    }
+
+    @Override
+    public void setTargetQ(double targetQ) {
+        if (targetQ != this.targetQ) {
+            double oldTargetQ = this.targetQ;
+            this.targetQ = targetQ;
+            for (LfNetworkListener listener : bus.getNetwork().getListeners()) {
+                listener.onLoadReactivePowerTargetChange(this, oldTargetQ, targetQ);
+            }
+        }
+    }
+
+    @Override
+    public boolean ensurePowerFactorConstantByLoad() {
+        return ensurePowerFactorConstantByLoad;
     }
 
     @Override
@@ -83,14 +165,26 @@ class LfLoadImpl extends AbstractPropertyBag implements LfLoad {
     }
 
     @Override
-    public void updateState(double diffLoadTargetP, boolean loadPowerFactorConstant) {
+    public void updateState(boolean loadPowerFactorConstant, boolean breakers) {
+        double diffLoadTargetP = targetP - initialTargetP;
         for (int i = 0; i < loadsRefs.size(); i++) {
             Load load = loadsRefs.get(i).get();
             double diffP0 = diffLoadTargetP * getParticipationFactor(i) * PerUnit.SB;
             double updatedP0 = load.getP0() + diffP0;
             double updatedQ0 = load.getQ0() + (loadPowerFactorConstant ? getPowerFactor(load) * diffP0 : 0.0);
-            load.getTerminal().setP(updatedP0);
-            load.getTerminal().setQ(updatedQ0);
+            load.getTerminal()
+                    .setP(updatedP0)
+                    .setQ(updatedQ0);
+        }
+
+        // update lcc converter station power
+        for (Ref<LccConverterStation> lccCsRef : lccCsRefs) {
+            LccConverterStation lccCs = lccCsRef.get();
+            double pCs = HvdcConverterStations.getConverterStationTargetP(lccCs, breakers); // A LCC station has active losses.
+            double qCs = HvdcConverterStations.getLccConverterStationLoadTargetQ(lccCs, breakers); // A LCC station always consumes reactive power.
+            lccCs.getTerminal()
+                    .setP(pCs)
+                    .setQ(qCs);
         }
     }
 
@@ -128,5 +222,4 @@ class LfLoadImpl extends AbstractPropertyBag implements LfLoad {
     private static double getPowerFactor(Load load) {
         return load.getP0() != 0 ? load.getQ0() / load.getP0() : 1;
     }
-
 }
